k8s/01_deployment.yml
---
# Deploys a thing with stuff.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx-app
spec:
  replicas: 50
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.13-alpine
        ports:
        - containerPort: 80
        # Override the default command to inject some data
        command: ["sh", "-c"]
        args:
        - >
          echo "Hello from $(hostname) :)" |
          tee /usr/share/nginx/html/index.html &&
          nginx -g 'daemon off;'
  strategy:
    type: RollingUpdate # this is the default value
